# MyTime

./: .gitignore  Cargo.toml  README.md  app.py  generate_test_data.py  requirements.txt  time_tracker.db
.codex/: config.toml
src/: app.rs  i18n.rs  main.rs  model.rs  repository.rs  ui.rs
src/ui/: mod.rs  records.rs  statistics.rs  timer.rs
templates/: base.html  edit_entry.html  index.html  statistics.html  time_entry.html
